--- a/Oil_ML.ipynb
+++ b/Oil_ML.ipynb
@@ -66,11 +66,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "v8S0XcCZ24HD"
-      },
-      "outputs": [],
       "source": [
         "def extract_label(filename):\n",
         "    return filename[:3]\n",
@@ -79,8 +74,22 @@
         "data = []\n",
         "labels = []\n",
         "testing_data = []\n",
-        "testing_labels = []\n",
-        "\n",
+        "testing_labels = []"
+      ],
+      "metadata": {
+        "id": "_soZ8bNraq1g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "v8S0XcCZ24HD"
+      },
+      "outputs": [],
+      "source": [
         "for i in range(4):\n",
         "  data_dir = data_dir = '/content/PhyB/Sample' + str(i+1)\n",
         "  data_temp = []\n",
@@ -116,32 +125,6 @@
         "label_encoder = LabelEncoder()\n",
         "labels_encoded = label_encoder.fit_transform(labels)\n",
         "labels_categorical = to_categorical(labels_encoded)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "labels.size"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RPQvIARnMlZy",
-        "outputId": "bfb870f3-9bee-4ca3-b306-40d2802223db"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 47
-        }
       ]
     },
     {
@@ -384,8 +367,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMbpB66/0EP+xcdMXxhhvDM",
+      "authorship_tag": "ABX9TyO2be/ueJ+2nkLxY2zAcaQU",
       "include_colab_link": true
     },
     "kernelspec": {
